--- a/main.css
+++ b/main.css
@@ -13,6 +13,7 @@ body{
     font-size: 3em;
     color: #FCFF4B;
     font-family: 'Press Start 2P', cursive;
+    text-shadow: 6px 6px black;
 
 }
 #score{
